# maturin

./: Cargo.toml
src/: introspect.rs  lib.rs  main.rs
test-crates/pyo3-stub-generation/: Cargo.toml
test-crates/pyo3-stub-generation/src/: lib.rs
tests/: run.rs
tests/common/: other.rs
