[package]
name = "pyo3-stub-generation"
version = "1.0.0"
edition = "2021"

[dependencies]
pyo3 = { git = "https://github.com/Tpt/pyo3.git", branch = "stub-generation", features = ["extension-module", "experimental-declarative-modules", "experimental-inspect"] }

[lib]
name = "pyo3_stub_generation"
crate-type = ["cdylib"]
